# fruity

./: .gitignore  CMakeLists.txt  README.md
concepts/: fruity.h  main.c  tooty.c
data/: io_bad_chars.txt  io_good_chars.txt  io_good_line.txt
docs/: v0-4_infinite.md  v0-4_intent.md
include/: fruity.h  fruity_io.h  fruity_point.h  fruity_set.h
scratch/: 00_abstract.md  01_stack_vs_heap.md  fruity.c  fruity.h  main.c  sizes.c  stacky.c
src/: CMakeLists.txt  fruity.c  fruity.h  fruity_io.c  fruity_io.h  fruity_point.c  fruity_set.c
test/: CMakeLists.txt  cmocka_headers.h  tests_fruity.c  tests_fruity_io.c  tests_fruity_io_read.c  tests_fruity_structs.c  tests_point.c  tests_set.c
